Added new species. Migrated validations from controller to validation file. Added AddDinosaurToCage function.
