# docs/swagger.yaml
@@ -88,6 +88,43 @@ paths:
           schema:
             type: string
       summary: Create a new cage
+  /cages/{cage_id}/dinosaurs/{dinosaur_id}:
+    post:
+      consumes:
+      - application/json
+      description: Add a dinosaur to a cage with specific checks.
+      operationId: add-dinosaur-to-cage
+      parameters:
+      - description: Cage ID
+        in: path
+        name: cage_id
+        required: true
+        type: integer
+      - description: Dinosaur ID
+        in: path
+        name: dinosaur_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Updated cage
+          schema:
+            $ref: '#/definitions/models.Cage'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Add a dinosaur to a cage.
   /cages/{id}:
     delete:
       description: Delete an existing cage by ID from the database.
